# vfd-crystallisation

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
benchmarks/: crystallisation_benchmark.py
book/: 00-frontmatter.md  00-preface.md  00a-copyright.md  00b-dedication.md  00d-how-to-read.md  01-the-view-from-inside.md  02-what-exists-even-means.md  03-the-most-symmetric-thing.md  04-what-the-spectrum-knows.md  05-three-directions-for-free.md  06-looking.md  07-the-mirror-that-makes-time.md  08-the-measured-numbers.md  09-one-world-many-resolutions.md  10-laws-at-coarse-grain.md  10-the-seventh-dimension-upstairs.md  11-the-seventh-dimension-upstairs.md  11-which-world-happens.md  12-what-we-dont-know.md  12-which-world-happens.md  13-what-we-dont-know.md  13-why-it-might-be-true.md  14-why-it-might-be-true.md  90-appendix.md  91-about.md  92-acknowledgements.md  93-ledger.md  94-glossary.md  95-references.md  DEDICATION-DRAFT.md  OUTLINE.md  PROCESS.md  STYLE.md  The-Crystal-and-the-Clock.epub  The-Crystal-and-the-Clock.html  _codex_prose_prompt.txt  back-cover-blurb.md  book.css  box-filter.lua  build.sh  (+3 more)
campaign/: README.md  WEEKLY.md  run_weekly.py  state.json
cascade-refinement-papers-2026-05-07/: cascade-mechanism-references.bib  cascade-selection-h4.tex
docs/: algebraic-existence-and-complexity.md  architecture.md  aria-closure-kernel.md  book-companion-map.md  book-companion-publication-plan.md  capstone-session-checkpoint.md  cascade-helix-hypothesis.md  claim-status-ledger.md  closure-cosmogenesis.md  consistency.md  convergence-with-smart.md  existence-as-closure.md  figures.md  fractal-cascade-projection.md  gaps.md  gauge-group-from-arenas.md  geometry-to-reality.md  glossary.md  gr-closure-derivation.md  index.md  joint-observer-instance.md  kappa-derivation-math.md  landing-plan-2026-06.md  legacy-master-math-consolidation.md  narrative-gap-closure.md  observer-instance-definition.md  observer-narrative-geometric.md  one-page-explainer.tex  overview.md  papers.md  pentagonal-torsion-derivation.md  per-observer-zero-line.md  phi-irrep-ym-bridge-finding.md  (+32 more)
release-bundles/phase-braid-calculator/: LICENSE  README.md  pyproject.toml
release-bundles/phase-braid-calculator/src/vfd_phase_braid/: __init__.py  boundary_capacity.py  cli.py  collatz_closure.py  lifted_arithmetic.py  phase_maps.py  prime_trace.py  report_generator.py  self_adjoint.py  vfd_number.py
release-bundles/phase-braid-calculator/tests/: test_engine.py
release-bundles/the-600-cell-five-24-cell-cosets/: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
release-bundles/the-600-cell-five-24-cell-cosets/closure_transform_engine/: __init__.py  decomposition.py
release-bundles/the-600-cell-five-24-cell-cosets/closure_transform_engine/examples/: run_wo007_schlafli_decomposition.py
release-bundles/the-600-cell-five-24-cell-cosets/closure_transform_engine/tests/: test_wo007_schlafli_decomposition.py
release-bundles/the-600-cell-five-24-cell-cosets/docs/outputs/: wo007_cosets.json  wo007_reproducibility_log.txt
release-bundles/the-600-cell-five-24-cell-cosets/vfd_v600/: group.py  icosian.py  operators.py  sigma.py  symmetry.py  tau_sigma.py
(+2514 files in other folders)
