[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfd-phase-braid-calculator"
version = "0.1.0"
description = "VFD Phase-Braid Calculator — phase-braid arithmetic and boundary-closure engine: lifts ordinary numbers into triad/compression/closure coordinates and probes Collatz, prime-trace, and finite-window self-adjoint structure."
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vfdcalc = "vfd_phase_braid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
