[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-600-cell-five-24-cell-cosets"
version = "1.0.0"
description = "A reproducible exact-arithmetic certificate for the decomposition of the 600-cell into five 24-cell cosets and the induced A5 action."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["closure_transform_engine", "closure_transform_engine.examples", "closure_transform_engine.tests", "vfd_v600"]

[tool.pytest.ini_options]
testpaths = ["closure_transform_engine/tests"]
